--- a/frontend/public/index.css
+++ b/frontend/public/index.css
@@ -9,6 +9,31 @@ body {
     align-items: center;
     min-height: 100vh;
 }
+/* DEMO-SPECIFIC STYLES */
+.typewriter {
+    color: #0f0f0f;
+    font-family: monospace;
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid rgb(185, 110, 219); /* The typewriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em; /* Adjust as needed */
+    animation: 
+      typing 3.5s steps(30, end) infinite,
+      blink-caret .5s step-end infinite;
+}
+  
+/* The typing effect */
+@keyframes typing {
+    0% { width: 0 }
+    100% { width: 100% }
+}
+  
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: rgb(131, 56, 146) }
+}
 
 .container {
     width: 100%;
@@ -104,8 +129,11 @@ main {
 #welcome-text {
     flex: 1;
     padding: 20px;
+    line-height: 25px;
 }
-
+h2{
+    color: #814a88;
+}
 #welcome-image {
     flex: 1;
     padding: 20px;
